--- a/dorg-catcher/client/src/index.html
+++ b/dorg-catcher/client/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base href="/" />
+  <base href="." />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <title>Welcome to Grails</title>
